--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,6 +8,6 @@ COPY ./pyproject.toml ./poetry.lock* /code/
 RUN poetry config virtualenvs.create false
 RUN poetry install --no-cache --without test
 
-COPY /src /code
+COPY /src /code/
 
 CMD uvicorn main:app --reload --host 0.0.0.0 --port ${FASTAPI_PORT}
