--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -9,10 +9,12 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.103.1"
 sqlalchemy = "^2.0.21"
-psycopg2-binary = "^2.9.7"
 alembic = "^1.12.0"
 pydantic = "^2.3.0"
 uvicorn = "^0.23.2"
+python-jose = {extras = ["cryptography"], version = "^3.3.0"}
+asyncpg = "^0.28.0"
+python-dotenv = "^1.0.0"
 
 
 [tool.poetry.group.test.dependencies]
