--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -14,7 +14,8 @@ pydantic = "^2.3.0"
 uvicorn = "^0.23.2"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
 asyncpg = "^0.28.0"
-python-dotenv = "^1.0.0"
+passlib = {extras = ["bcrypt"], version = "^1.7.4"}
+pydantic-settings = "^2.0.3"
 
 
 [tool.poetry.group.test.dependencies]
