--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -9,7 +9,6 @@ readme = "README.md"
 python = "^3.11"
 fastapi = "^0.103.1"
 sqlalchemy = "^2.0.21"
-alembic = "^1.12.0"
 pydantic = "^2.3.0"
 uvicorn = "^0.23.2"
 python-jose = {extras = ["cryptography"], version = "^3.3.0"}
@@ -21,6 +20,11 @@ pydantic-settings = "^2.0.3"
 [tool.poetry.group.test.dependencies]
 httpx = "^0.25.0"
 pytest = "^7.4.2"
+
+
+[tool.poetry.group.dev.dependencies]
+alembic = "^1.12.0"
+python-dotenv = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core"]
