--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -25,6 +25,13 @@ pytest = "^7.4.2"
 [tool.poetry.group.dev.dependencies]
 alembic = "^1.12.0"
 python-dotenv = "^1.0.0"
+flake8 = "6.1.0"
+black = "23.9.1"
+isort = "5.12.0"
+pre-commit = "^3.4.0"
+
+[tool.isort]
+profile = "black"
 
 [build-system]
 requires = ["poetry-core"]
