--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,8 +1,8 @@
 version: '3'
 services:
   waveaccess-python-assignment:
-    container_name: waveaccess-python-assignment.backend
-    command: uvicorn main:app --host 0.0.0.0 --port ${FASTAPI_PORT}
+    container_name: waveaccess-python-assignment
+    command: uvicorn main:app --reload --host 0.0.0.0 --port ${FASTAPI_PORT}
     build: app/
     volumes: 
       - ./app/src/:/code
@@ -17,11 +17,11 @@ services:
       - backend
   
   pgsql:
-    container_name: pgsql.backend
+    container_name: pgsql
     image: postgres:14
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    restart: unless-stopped
+    restart: always
     env_file:
       - .env
     user: ${POSTGRES_USER}
