--- a/app/pyproject.toml
+++ b/app/pyproject.toml
@@ -20,6 +20,7 @@ pydantic-settings = "^2.0.3"
 [tool.poetry.group.test.dependencies]
 httpx = "^0.25.0"
 pytest = "^7.4.2"
+pytest-asyncio = "^0.21.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -30,8 +31,10 @@ black = "23.9.1"
 isort = "5.12.0"
 pre-commit = "^3.4.0"
 
+
 [tool.isort]
 profile = "black"
+
 
 [build-system]
 requires = ["poetry-core"]
